@@ -22,3 +22,5 @@
 #undef HAVE_FUNC_GETHOSTBYADDR_R_8
 
 #undef HAVE_INT64
+
+#undef HAVE_READLINE
