@@ -1,3 +1,7 @@
+Sun Sep 15 18:45:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* acconfig.h configure.in src/apps/Makefile.am src/apps/tsql.c:
+	- compile tsql with readline, if found
+
 Sun Sep 15 18:03:56 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* include/tdsodbc.h src/odbc/convert_sql2string.c:
 	* src/odbc/convert_tds2sql.c src/odbc/odbc.c:
